@@ -18,8 +18,6 @@ import static org.junit.jupiter.api.AssertionUtils.nullSafeGet;
 import java.util.function.Supplier;
 
 import org.junit.jupiter.api.function.Executable;
-import org.junit.jupiter.api.function.ThrowingSupplier;
-import org.junit.platform.commons.util.StringUtils;
 import org.opentest4j.AssertionFailedError;
 
 /**
@@ -35,49 +33,25 @@ class AssertThrows {
 	}
 
 	static <T extends Throwable> T assertThrows(Class<T> expectedType, Executable executable) {
-		return assertThrows(expectedType, asSupplier(executable), (Object) null);
+		return assertThrows(expectedType, executable, (Object) null);
 	}
 
 	static <T extends Throwable> T assertThrows(Class<T> expectedType, Executable executable, String message) {
-		return assertThrows(expectedType, asSupplier(executable), (Object) message);
+		return assertThrows(expectedType, executable, (Object) message);
 	}
 
 	static <T extends Throwable> T assertThrows(Class<T> expectedType, Executable executable,
 			Supplier<String> messageSupplier) {
 
-		return assertThrows(expectedType, asSupplier(executable), (Object) messageSupplier);
-	}
-
-	/**
-	 * @since 5.3
-	 */
-	static <T extends Throwable> T assertThrows(Class<T> expectedType, ThrowingSupplier<?> supplier) {
-		return assertThrows(expectedType, supplier::get, (Object) null);
-	}
-
-	/**
-	 * @since 5.3
-	 */
-	static <T extends Throwable> T assertThrows(Class<T> expectedType, ThrowingSupplier<?> supplier, String message) {
-		return assertThrows(expectedType, supplier::get, (Object) message);
-	}
-
-	/**
-	 * @since 5.3
-	 */
-	static <T extends Throwable> T assertThrows(Class<T> expectedType, ThrowingSupplier<?> supplier,
-			Supplier<String> messageSupplier) {
-
-		return assertThrows(expectedType, supplier::get, (Object) messageSupplier);
+		return assertThrows(expectedType, executable, (Object) messageSupplier);
 	}
 
 	@SuppressWarnings("unchecked")
-	private static <T extends Throwable> T assertThrows(Class<T> expectedType, ResultAwareThrowingSupplier<?> supplier,
+	private static <T extends Throwable> T assertThrows(Class<T> expectedType, Executable executable,
 			Object messageOrSupplier) {
 
-		Object result;
 		try {
-			result = supplier.get();
+			executable.execute();
 		}
 		catch (Throwable actualException) {
 			if (expectedType.isInstance(actualException)) {
@@ -90,54 +64,9 @@ class AssertThrows {
 			}
 		}
 
-		String includedResult = supplier.includeResult()
-				? String.format(" (returned %s).", StringUtils.nullSafeToString(result))
-				: ".";
 		String message = buildPrefix(nullSafeGet(messageOrSupplier))
-				+ String.format("Expected %s to be thrown, but nothing was thrown", getCanonicalName(expectedType))
-				+ includedResult;
+				+ String.format("Expected %s to be thrown, but nothing was thrown.", getCanonicalName(expectedType));
 		throw new AssertionFailedError(message);
-	}
-
-	private interface ResultAwareThrowingSupplier<T> extends ThrowingSupplier<T> {
-
-		/**
-		 * Determine if the result of invoking {@link #get()} should be included
-		 * in the assertion failure message if this supplier returns an actual
-		 * result instead of throwing an exception.
-		 *
-		 * @return {@code true} by default; can be overridden in concrete implementations
-		 */
-		default boolean includeResult() {
-			return true;
-		}
-	}
-
-	private static ResultAwareThrowingSupplier<Void> asSupplier(Executable executable) {
-		return new ResultAwareThrowingSupplierAdapter(executable);
-	}
-
-	/**
-	 * Adapts an {@link Executable} to the {@link ResultAwareThrowingSupplier} API.
-	 */
-	private static class ResultAwareThrowingSupplierAdapter implements ResultAwareThrowingSupplier<Void> {
-
-		private final Executable executable;
-
-		ResultAwareThrowingSupplierAdapter(Executable executable) {
-			this.executable = executable;
-		}
-
-		@Override
-		public Void get() throws Throwable {
-			executable.execute();
-			return null;
-		}
-
-		@Override
-		public boolean includeResult() {
-			return false;
-		}
 	}
 
 }
