@@ -1211,75 +1211,6 @@ public class Assertions {
 		return AssertThrows.assertThrows(expectedType, executable, messageSupplier);
 	}
 
-	// --- supplier ---
-
-	/**
-	 * <em>Asserts</em> that execution of the given {@code supplier} throws
-	 * an exception of the {@code expectedType} and returns the exception.
-	 *
-	 * <p>If no exception is thrown, or if an exception of a different type is
-	 * thrown, this method will fail.
-	 *
-	 * <p>If the given {@link ThrowingSupplier} returns a result instead of
-	 * throwing an exception, the result will be included in the failure message.
-	 *
-	 * <p>If you do not want to perform additional checks on the exception instance,
-	 * simply ignore the return value.
-	 *
-	 * @since 5.3
-	 */
-	@API(status = STABLE, since = "5.3")
-	public static <T extends Throwable> T assertThrows(Class<T> expectedType, ThrowingSupplier<?> supplier) {
-		return AssertThrows.assertThrows(expectedType, supplier);
-	}
-
-	/**
-	 * <em>Asserts</em> that execution of the given {@code supplier} throws
-	 * an exception of the {@code expectedType} and returns the exception.
-	 *
-	 * <p>If no exception is thrown, or if an exception of a different type is
-	 * thrown, this method will fail.
-	 *
-	 * <p>If the given {@link ThrowingSupplier} returns a result instead of
-	 * throwing an exception, the result will be included in the failure message.
-	 *
-	 * <p>If you do not want to perform additional checks on the exception instance,
-	 * simply ignore the return value.
-	 *
-	 * @since 5.3
-	 */
-	@API(status = STABLE, since = "5.3")
-	public static <T extends Throwable> T assertThrows(Class<T> expectedType, ThrowingSupplier<?> supplier,
-			String message) {
-
-		return AssertThrows.assertThrows(expectedType, supplier, message);
-	}
-
-	/**
-	 * <em>Asserts</em> that execution of the given {@code supplier} throws
-	 * an exception of the {@code expectedType} and returns the exception.
-	 *
-	 * <p>If no exception is thrown, or if an exception of a different type is
-	 * thrown, this method will fail.
-	 *
-	 * <p>If necessary, the failure message will be retrieved lazily from the
-	 * supplied {@code messageSupplier}.
-	 *
-	 * <p>If the given {@link ThrowingSupplier} returns a result instead of
-	 * throwing an exception, the result will be included in the failure message.
-	 *
-	 * <p>If you do not want to perform additional checks on the exception instance,
-	 * simply ignore the return value.
-	 *
-	 * @since 5.3
-	 */
-	@API(status = STABLE, since = "5.3")
-	public static <T extends Throwable> T assertThrows(Class<T> expectedType, ThrowingSupplier<?> supplier,
-			Supplier<String> messageSupplier) {
-
-		return AssertThrows.assertThrows(expectedType, supplier, messageSupplier);
-	}
-
 	// --- executable ---
 
 	/**
