@@ -35,7 +35,7 @@ class AssertDoesNotThrowAssertionsTests {
 	private static final ThrowingSupplier<String> something = () -> "enigma";
 
 	@Test
-	void assertDoesNotThrowWithFutureMethodReference() {
+	void assertDoesNotThrowWithMethodReferenceForNonVoidReturnType() {
 		FutureTask<String> future = new FutureTask<>(() -> {
 			return "foo";
 		});
@@ -43,9 +43,11 @@ class AssertDoesNotThrowAssertionsTests {
 
 		String result;
 
-		// Current compiler's type inference
-		result = assertDoesNotThrow(future::get);
-		assertEquals("foo", result);
+		// Current compiler's type inference: does NOT compile since the compiler
+		// cannot figure out which overloaded variant of assertDoesNotThrow() to
+		// invoke (i.e., Executable vs. ThrowingSupplier).
+		//
+		// result = assertDoesNotThrow(future::get);
 
 		// Explicitly as an Executable
 		assertDoesNotThrow((Executable) future::get);
@@ -61,7 +63,9 @@ class AssertDoesNotThrowAssertionsTests {
 
 		// Note: the following does not compile since the compiler cannot properly
 		// perform type inference for a method reference for an overloaded method
-		// that has a void return type such as Foo.overloaded(...)
+		// that has a void return type such as Foo.overloaded(...), IFF the
+		// compiler is simultaneously trying to pick which overloaded variant
+		// of assertDoesNotThrow() to invoke.
 		//
 		// assertDoesNotThrow(foo::overloaded);
 
