@@ -1,7 +1,7 @@
 [[release-notes-5.3.1]]
 == 5.3.1
 
-*Date of Release:* ❓
+*Date of Release:* September ❓, 2018
 
 *Scope:* Bug fixes since 5.3.0
 
@@ -30,7 +30,16 @@ repository on GitHub.
 
 ==== Bug Fixes
 
-* ❓
+* Invocations of `assertThrows()` that are passed a method reference for an overloaded
+  method with a `void` return type once again compile.
+  - For example, given an instance of `java.lang.Object` stored in a variable named
+    `object`, `assertThrows(Exception.class, object::wait)` compiled against JUnit 5.2.0,
+    failed to compile against JUnit 5.3.0, but now compiles against JUnit 5.3.1.
+
+==== Breaking Changes
+
+* In order to revert the aforementioned breaking change, variants of `assertThrows()`
+  introduced in JUnit 5.3.0 that accept `ThrowingSupplier` arguments have been removed.
 
 
 [[release-notes-5.3.1-junit-vintage]]
